store/src/styles/sections/select-delivery.scss
/* ... */
.hern-delivery__address-tunnel__close-icon {
   stroke: currentColor;
}
.hern-delivery__address-tunnel__address-search {
   margin-bottom: 16px;
   .hern-form__label {
      margin-bottom: 0.5rem;
   }
   .hern-store-location-selector-main__location-input {
      background-color: #fff;
      border: 0.3px solid rgba(51, 51, 51, 0.4);
      border-radius: 0.5rem;
   }

   .google-places-autocomplete {
      width: 100%;
      position: relative;
   }
   .google-places-autocomplete__input {
      border-bottom-width: 1px;
      width: 100%;
      height: 2rem;
   }
   .google-places-autocomplete__input:focus {
      outline: none;
      border-color: rgba(55, 65, 81, 1);
   }
   .google-places-autocomplete__input:active,
   .google-places-autocomplete__input:focus,
   .google-places-autocomplete__input:hover {
      outline: 0;
      border: none;
   }
   .google-places-autocomplete__suggestions-container {
      background: #fff;
      border-radius: 0 0 5px 5px;
      color: #000;
      position: absolute;
      width: 100%;
      z-index: 2;
      box-shadow: 0 1px 16px 0 rgba(0, 0, 0, 0.09);
   }
   .google-places-autocomplete__suggestion {
      font-size: 1rem;
      text-align: left;
      padding: 10px;
      cursor: pointer;
   }
   .google-places-autocomplete__suggestion:hover {
      background: rgba(0, 0, 0, 0.1);
   }
   .google-places-autocomplete__suggestion--active {
      background: #e0e3e7;
   }
}
.hern-delivery__address-tunnel__country-zip-code {
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
   @media only screen and (min-width: 768px) {
      flex-direction: row;
   }
   @media only screen and (min-width: 980px) {
      flex-direction: column;
   }
}
.hern-delivery__address-tunnel__save-btn {
   background: var(--hern-accent);
   font-family: 'Lato';
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
   color: #ffffff;
   border-radius: 999px;
   padding: 0.75rem 3rem;
   display: flex;
   margin: 2.5rem auto 0 auto;
   &:hover {
      opacity: 0.8;
   }
   &--disabled {
      cursor: not-allowed;
      background: rgba(17, 130, 59, 0.2);
      color: rgba(51, 51, 51, 0.6);
   }
}
.hern-select-delivery__message {
   background: rgba(51, 51, 51, 0.1);
   border-radius: 6.8px;
   text-align: center;
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
   font-size: 1rem;
   line-height: 20px;
   color: #333333;
   padding: 0.75rem;
}

.hern-delivery {
   &__main {
      max-width: 1150px;
      padding: 1rem;
      margin: 0 auto;
   }
   &__card {
      display: flex;
      margin-bottom: 2rem;
      &:last-child {
         margin-bottom: 0;
      }
      &__counter {
         margin-top: 1.5rem;
         width: 2.75rem;
         height: 2.75rem;
         border-radius: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
         background: #ffffff;
         border: 0.5px solid rgba(51, 51, 51, 0.2);
         margin-right: -8px;
         z-index: 99;
         > span {
            font-family: 'Inter', sans-serif;
            font-style: normal;
            font-weight: 500;
            font-size: 1.25rem;
            color: rgba(51, 51, 51, 0.4);
         }
         &--active {
            background-color: var(--hern-accent);

            > span {
               color: #ffffff;
            }
         }

         @media (max-width: 768px) {
            width: 1.875rem;
            height: 1.875rem;
         }
      }
      &__content__wrapper {
         background: #ffffff;
         box-shadow: 0px 0px 29px rgba(0, 0, 0, 0.08);
         border-radius: 4px;
         width: 100%;
         padding: 2rem 3rem;
      }
      &__content {
         display: block;
      }
      &__content__header {
         font-family: 'Lato';
         font-style: normal;
         font-weight: 600;
         font-size: 1.75rem;
         color: rgba(51, 51, 51, 0.4);
         display: flex;
         align-items: center;
         gap: 0.5rem;
         margin-bottom: 1.5rem;
         &--active {
            color: #333333;
         }
         &__add-address-btn {
            margin-left: auto;
            cursor: pointer;
            &:hover {
               color: var(--hern-accent);
            }
         }

         @media (max-width: 768px) {
            font-size: 1.125rem;
            grid-gap: 0.375rem;
            margin-bottom: 1.25rem;
         }
      }
   }
   &__continue-btn {
      background: var(--hern-accent);
      border-radius: 32px;
      display: flex;
      align-items: center;
      justify-content: center;
      margin: 1.5rem auto;
      font-family: 'Lato';
      font-style: normal;
      font-weight: 500;
      font-size: 20px;
      line-height: 24px;
      color: rgba(51, 51, 51, 0.6);
      cursor: pointer;
      transition: all 0.2s ease-in-out;
      padding: 0.75rem 3.5rem;
      color: #ffffff;
      &:hover {
         opacity: 0.8;
      }
      &--disabled {
         background: rgba(17, 130, 59, 0.2);
         cursor: not-allowed;

         &:hover {
            opacity: 0.8;
         }
      }
   }
}
/* ... */

